--- a/td1.ipynb
+++ b/td1.ipynb
@@ -233,7 +233,7 @@
     "print(M * len(mu))\n",
     "assert xi_train.shape[0] == M * len(mu)\n",
     "\n",
-    "# Super ! on a la dim correcte pour le training set"
+    "# Super ! on a la dim& correcte pour le training set"
    ]
   },
   {
@@ -648,6 +648,275 @@
     "- Travailler l'architecture et la fonction d'activation\n",
     "- Travailler les paramètres (batch_size), rajouter des couches ? \n",
     "- Donner les quantiles car meilleure type de représentation (plutôt que de la série temp de longueur T...) ; en effet, on rq la loi de Student est plutôt caractérisée par ses tails..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data import t_student_drift\n",
+    "from features import build_features\n",
+    "from models import predict_model, train_model\n",
+    "from visualization import plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'visualization.plot' from 'c:\\\\Users\\\\cleme\\\\DL-finance\\\\visualization\\\\plot.py'>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reload libraries\n",
+    "import importlib\n",
+    "importlib.reload(t_student_drift)\n",
+    "importlib.reload(build_features)\n",
+    "importlib.reload(predict_model)\n",
+    "importlib.reload(train_model)\n",
+    "importlib.reload(plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xi, mu = t_student_drift.generate_timeseries()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = build_features.prepare_train(xi, mu) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:models.train_model:None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 12)                120012    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 13        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 120,025\n",
+      "Trainable params: 120,025\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = train_model.create_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:models.train_model:Training model...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.1198 - val_loss: 8.9872e-06\n",
+      "Epoch 2/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 4.0823e-06 - val_loss: 1.1373e-06\n",
+      "Epoch 3/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 3.9525e-07 - val_loss: 6.1983e-08\n",
+      "Epoch 4/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 1.7227e-08 - val_loss: 1.4452e-09\n",
+      "Epoch 5/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 3.2860e-10 - val_loss: 1.3534e-11\n",
+      "Epoch 6/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 2.5515e-12 - val_loss: 4.5860e-14\n",
+      "Epoch 7/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 7.2287e-15 - val_loss: 4.8566e-17\n",
+      "Epoch 8/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 6.4281e-18 - val_loss: 1.3163e-20\n",
+      "Epoch 9/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 1.4639e-21 - val_loss: 6.9279e-25\n",
+      "Epoch 10/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 6.4515e-26 - val_loss: 4.7455e-30\n",
+      "Epoch 11/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 3.6654e-31 - val_loss: 2.2263e-36\n",
+      "Epoch 12/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 1.3894e-37 - val_loss: 0.0000e+00\n",
+      "Epoch 13/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 14/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 15/50\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 16/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 17/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 18/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 19/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 20/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 21/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 22/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 23/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 24/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 25/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 26/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 27/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 28/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 29/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 30/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 31/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 32/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 33/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 34/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 35/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 36/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 37/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 38/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 39/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 40/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 41/50\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 42/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 43/50\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 44/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 45/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 46/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 47/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 48/50\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 49/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n",
+      "Epoch 50/50\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 0.0000e+00 - val_loss: 0.0000e+00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:models.train_model:Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1c80c16eca0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_model.train_model(model, X_train, y_train, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:models.predict_model:Prediction: -0.7124680876731873\n",
+      "INFO:models.predict_model:True value: 1.8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.8, -0.7124681)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_model.predict_mu(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_model.generalization_evaluation(model)"
    ]
   }
  ],
